@@ -573,4 +573,9 @@ void	DBselect_uint64(const char *sql, zbx_vector_uint64_t *ids);
 
 int	get_nodeid_by_id(zbx_uint64_t id);
 
+#ifdef HAVE_POSTGRESQL
+size_t	DBbytea_escape(const u_char *input, size_t ilen, char **output, size_t *olen);
+size_t	DBbytea_unescape(u_char *io);
+#endif
+
 #endif
